--- a/app/src/main/res/layout/icon_layout.xml
+++ b/app/src/main/res/layout/icon_layout.xml
@@ -15,12 +15,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <TextView
+            android:id="@+id/tv1"
             style="@style/icon_text_color"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="4sp"
             android:text="@string/expend"/>
         <TextView
+            android:id="@+id/tv2"
             style="@style/icon_text_color"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -31,12 +33,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
+                android:id="@+id/tv3"
                 style="@style/icon_text_color"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="4sp"
                 android:text="@string/income"/>
             <TextView
+                android:id="@+id/tv4"
                 style="@style/icon_text_color"
                 android:textSize="4sp"
                 android:layout_width="wrap_content"
@@ -51,12 +55,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <TextView
+            android:id="@+id/tv5"
             style="@style/icon_text_color"
             android:textSize="4sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/budget_balance"/>
         <TextView
+            android:id="@+id/tv6"
             style="@style/icon_text_color"
             android:textSize="4sp"
             android:layout_width="wrap_content"
