--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -106,7 +106,7 @@
     <style name="action_bar_style">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">?actionBarSize</item>
-        <item name="android:background">@color/cost_top_background</item>
+        <item name="android:background">@color/action_bar_background</item>
     </style>
     <style name="action_bar_title_style">
         <item name="android:textColor">@color/select_action_bar_click_color</item>
@@ -120,6 +120,45 @@
         <item name="android:textColor">#fff</item>
     </style>
 
+    <style name="face_board_top_view_background">
+        <item name="android:layerType">software</item>
+        <item name="android:background">@drawable/shape_view_dotline</item>
+    </style>
 
+    <style name="face_board_top_board_text_style">
+        <item name="android:textColor">@color/face_board_top_left_text_color</item>
+        <item name="android:textSize">@dimen/face_board_top_left_text_size</item>
+    </style>
 
+    <style name="face_board_content_title_text_style">
+        <item name="android:textColor">#303030</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+    <style name="face_board_content_content_text_style">
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/face_board_top_left_text_color</item>
+    </style>
+    <style name="face_board_title_text_style">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/face_board_top_left_text_color</item>
+    </style>
+    <style name="face_board_content_icon_style">
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:layout_marginLeft">@dimen/action_bar_icon_padding</item>
+    </style>
+    <style name="face_board_title_layout_style">
+        <item name="android:paddingTop">@dimen/face_board_content_title_paddingTop</item>
+        <item name="android:paddingLeft">@dimen/action_bar_padding</item>
+        <item name="android:paddingRight">@dimen/action_bar_padding</item>
+        <item name="android:paddingBottom">@dimen/action_bar_padding</item>
+    </style>
+    <style name="face_board_content_layout_style">
+        <item name="android:clickable">true</item>
+        <item name="android:background">@drawable/selector_button_click_background_0</item>
+        <item name="android:paddingBottom">@dimen/action_bar_padding</item>
+        <item name="android:paddingTop">@dimen/action_bar_padding</item>
+        <item name="android:paddingRight">@dimen/action_bar_padding</item>
+        <item name="android:paddingLeft">15dp</item>
+    </style>
 </resources>
