--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,10 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <View
+        android:id="@+id/viewShow"
+        android:layout_width="0dp"
+        android:layout_height="0dp"/>
     <ScrollView
         android:layout_weight="1"
         android:scrollbars="none"
