主页面的 看板 和 跳转 选择 看板页面设置完毕

--- a/app/src/main/res/layout/face_board_text_item.xml
+++ b/app/src/main/res/layout/face_board_text_item.xml
@@ -9,8 +9,7 @@
         style="@style/face_board_content_title_text_style"
         android:layout_gravity="left|center_vertical"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="wrap_content"/>
     <ImageView
         android:id="@+id/icon"
         android:layout_gravity="right|center_vertical"
