--- a/app/src/main/res/layout/activity_add_account_book_detail.xml
+++ b/app/src/main/res/layout/activity_add_account_book_detail.xml
@@ -91,7 +91,7 @@
         android:layout_height="match_parent"/>
     <CheckBox
         android:layout_marginBottom="10dp"
-        android:button="@drawable/select_button"
+        android:button="@drawable/selector_button"
         android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
