--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,7 +66,7 @@
             <Button
                 android:layout_centerHorizontal="true"
                 android:layout_below="@+id/main_rv_list"
-                android:id="@+id/main_custom_made_btn"
+                android:id="@+id/main_board_change"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
