--- a/app/src/main/res/layout/main_recycler_item.xml
+++ b/app/src/main/res/layout/main_recycler_item.xml
@@ -8,10 +8,13 @@
    >
     <ImageView
         android:id="@+id/main_recycler_item_iv"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="@dimen/main_look_board_icon_size"
+        android:layout_height="@dimen/main_look_board_icon_size"
         android:layout_gravity="center_vertical"
-        android:layout_margin="6dp"
+        android:layout_marginLeft="@dimen/action_bar_padding"
+        android:layout_marginTop="@dimen/base_margin"
+        android:layout_marginBottom="@dimen/base_margin"
+        android:layout_marginRight="@dimen/action_bar_padding"
         android:src="@drawable/icon_trans_item_month"
         />
     <LinearLayout
@@ -24,15 +27,16 @@
         <TextView
             android:id="@+id/main_recycler_item_title_tv"
             android:layout_width="wrap_content"
-            android:textColor="#3a4143"
+            android:textColor="@color/baseTextTitleColor"
             android:layout_height="wrap_content"
             android:textSize="14sp"
             android:text="今天"/>
         <TextView
-            android:id="@+id/main_recycler_item_time_tv"
+            android:id="@+id/main_recycler_item_content_tv"
+            android:layout_marginTop="@dimen/base_distance_top"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#767e89"
+            android:textColor="@color/baseTextContentColor"
             android:textSize="12sp"
             android:text="2016年10月18号 "/>
     </LinearLayout>
@@ -44,11 +48,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <TextView
-            android:id="@+id/main_recycler_item_budget_tv"
+            android:id="@+id/main_recycler_item_expend_tv"
             style="@style/main_recycler_item_budget_tv"
             android:text="00.00"/>
         <TextView
-            android:id="@+id/main_recycler_item_outlay_tv"
+            android:id="@+id/main_recycler_item_income_tv"
             style="@style/main_recycler_item_outlay_tv"
             android:text="00.00"
             />
@@ -62,7 +66,6 @@
         android:layout_height="wrap_content"
         android:text="8888理财金" />
     <ImageView
-        android:id="@+id/main_recycler_item_icon_iv"
         android:layout_gravity="center_vertical"
         android:layout_margin="4dp"
         android:layout_width="wrap_content"
