--- a/app/src/main/res/layout/main_top_fragment_layout.xml
+++ b/app/src/main/res/layout/main_top_fragment_layout.xml
@@ -1,16 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main_content_layout"
-    android:padding="10dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/head_report_business_trip_bg">
+    >
+    <ImageView
+        android:id="@+id/main_top_icon"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        android:src="@drawable/head_report_business_trip_bg"/>
     <ImageView
         android:layout_alignParentRight="true"
         android:id="@+id/main_content_message_iv"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="20dp"
         style="@style/main_content_message_iv"
         android:src="@drawable/message_center_icon"/>
     <ImageView
+        android:layout_alignTop="@+id/main_content_message_iv"
         android:id="@+id/main_content_take_notes_iv"
         android:layout_toLeftOf="@+id/main_content_message_iv"
         style="@style/main_content_take_notes_iv"
@@ -25,16 +33,16 @@
         android:id="@+id/main_content_income_layout"
         android:orientation="horizontal"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <TextView
-            android:id="@+id/main_content_income_title_tv"
+            android:id="@+id/board_1"
             style="@style/main_content_income_title_tv"
             android:text="本月收入:"/>
         <TextView
-            android:id="@+id/main_content_income_number_tv"
+            android:id="@+id/board_number_1"
             style="@style/main_content_base_tv"
             android:text="0.00"/>
     </LinearLayout>
@@ -46,7 +54,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <TextView
-            android:id="@+id/main_content_expend_number_tv"
+            android:id="@+id/board_number_0"
             style="@style/main_content_expend_number_tv"
             android:text="0.00"/>
         <com.example.suishouji.view.ShowHideNumberImageView
@@ -63,7 +71,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
-        android:id="@+id/main_content_expend_title_tv"
+        android:id="@+id/board_0"
         android:layout_above="@+id/main_content_expend_number_layout"
         android:layout_alignLeft="@id/main_content_expend_number_layout"
         style="@style/main_content_base_tv"
@@ -72,18 +80,18 @@
         android:orientation="horizontal"
         android:layout_alignBottom="@+id/main_content_income_layout"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <TextView
             android:layout_gravity="center_vertical"
-            android:id="@+id/main_content_budget_title_tv"
+            android:id="@+id/board_2"
             style="@style/main_content_base_tv"
             android:text="预算余额:"/>
         <TextView
-            android:id="@+id/main_content_budget_number_tv"
+            android:id="@+id/board_number_2"
             style="@style/main_content_budget_number_tv"
-            android:text="1000.00"/>
+            android:text="0.00"/>
     </LinearLayout>
 
 </RelativeLayout>
